# ordnung

./: .gitignore  Makefile  README.md  pyproject.toml
src/ordnung/: __init__.py  agent.py  cli.py  entities.py  environment.py  llm.py  organize.py  security.py  system_prompt.md  tools.py  tui.py
tests/: conftest.py  test_agent.py  test_environment.py  test_llm.py  test_security.py  test_tools.py
tests/manual/: conftest.py  test_organized_directory.py
